udpsrc: Ignore G_IO_ERROR_CONNECTION_CLOSED when receiving data

This happens on Windows if we use the same socket for sending packets,
and the remote sends ICMP port/host unreachable messages.

https://bugzilla.gnome.org/show_bug.cgi?id=754534